--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,47 @@
-:root {
-    font-size: 16px;
-    font-family: 'Roboto Slab', serif;
+*{
+    margin:0;
+    padding:0;
 }
 
-h1, h2, h3, h4, h5, h6 {
-    font-family: 'Open Sans', sans-serif;
+body{
+    background-color: rgb(241, 238, 238);
+
+}
+header{
+    background-color:rgb(241, 238, 238);
+    
+    /*background-image: linear-gradient(to right, rgb(241, 238, 238), rgb(54, 52, 52));*/
+}
+nav{
+    width:100%;
+    display:grid;
+    grid-template-columns: repeat(3, 1fr);
+    /*background-image: linear-gradient(to bottom, rgb(241, 238, 238), rgb(54, 52, 52));*/
+}
+
+
+div{
+    text-align: center;
+    top:50%;
+    height:5rem;
+    border-bottom-right-radius:0;
+    border-bottom-left-radius:0;
+    background-image: linear-gradient(to bottom, rgb(241, 238, 238), rgb(54, 52, 52));
+    transition:height 1s, border-bottom-right-radius 1s, border-bottom-left-radius 1s, background-color 1s, color 1s;
+}
+div:hover{
+    border-bottom-right-radius: 1rem;
+    border-bottom-left-radius: 1rem;
+    background-image: linear-gradient(to bottom, rgb(241, 238, 238), rgb(54, 52, 52));
+    height:7rem;
+}
+
+@media (max-width:1000px){
+    nav{
+        grid-template-columns:1fr;
+        background-image: linear-gradient(to bottom, rgb(241, 238, 238), rgb(54, 52, 52));
+    }
+    div{
+        background-image: none;
+    }
 }
