--- a/css/style.css
+++ b/css/style.css
@@ -5,45 +5,64 @@
 
 body{
     background-color: rgb(241, 238, 238);
-
+    font-size: 2rem;
+    background-image: url("../pics/cityBackground.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 header{
-    background-color:rgb(241, 238, 238);
-    
-    /*background-image: linear-gradient(to right, rgb(241, 238, 238), rgb(54, 52, 52));*/
+    background-color:rgba(241, 238, 238, 0.8);
 }
+
 nav{
     width:100%;
     display:grid;
     grid-template-columns: repeat(3, 1fr);
-    /*background-image: linear-gradient(to bottom, rgb(241, 238, 238), rgb(54, 52, 52));*/
+}
+#delare{
+    height:12rem;
 }
 
-
 .navItem{
-    display:flex;
-    /*align-content: center;*/
-    justify-content: center;
+    text-align: center;
     height:5rem;
     border-bottom-right-radius:0;
     border-bottom-left-radius:0;
-    
-    background-image: linear-gradient(to bottom, rgb(241, 238, 238), rgb(54, 52, 52));
-    transition:height 1s, border-bottom-right-radius 1s, border-bottom-left-radius 1s, background-color 1s, color 1s;
+    padding-top:3%;
+    background-image: linear-gradient(to bottom, rgba(241, 238, 238, 0.8), rgba(54, 52, 52, 1));
+    transition:height 1s, border-bottom-right-radius 1s, border-bottom-left-radius 1s, color 1s, padding-top 1s;
 }
 .navItem:hover{
     border-bottom-right-radius: 1rem;
     border-bottom-left-radius: 1rem;
-    background-image: linear-gradient(to bottom, rgb(241, 238, 238), rgb(54, 52, 52));
     height:7rem;
+    padding-top:7%;
+    color:white;
+}
+
+main{
+    display:grid;
+    grid-template-columns: repeat(2, 1fr);
+}
+
+.dark{
+    background-color:darkgray;
+    color:white;
+    border-radius: 1rem;
+    opacity:0.8;
+    text-align:center;
+    padding: 30%;
+    margin: 10% 10% 0 0;
 }
 
 @media (max-width:1000px){
     nav{
         grid-template-columns:1fr;
-        background-image: linear-gradient(to bottom, rgb(241, 238, 238), rgb(54, 52, 52));
+        background-image: linear-gradient(to bottom, rgba(241, 238, 238, 0.8), rgba(54, 52, 52, 1));
     }
     .navItem{
         background-image: none;
+        border-top:solid;
+        border-color:rgba(15, 15, 15, 0.4);
     }
 }
