--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,9 @@
     margin:0;
     padding:0;
 }
-
+.fas{
+    font-size: 1.5rem;
+}
 body{
     background-color: rgb(241, 238, 238);
     font-size: 2rem;
@@ -20,7 +22,17 @@ nav{
     grid-template-columns: repeat(3, 1fr);
 }
 #delare{
-    height:12rem;
+    height:18rem;
+}
+.aboutList{
+    display:none;
+    text-align: start;
+    opacity:0;
+    font-size: 0.1rem;
+    transition: opacity 1s, font-size 1s;
+    list-style-position: inside;
+    padding-left:3rem;
+    display:block;
 }
 
 .navItem{
@@ -30,16 +42,19 @@ nav{
     border-bottom-left-radius:0;
     padding-top:3%;
     background-image: linear-gradient(to bottom, rgba(241, 238, 238, 0.8), rgba(54, 52, 52, 1));
-    transition:height 1s, border-bottom-right-radius 1s, border-bottom-left-radius 1s, color 1s, padding-top 1s;
+    transition:all 1s;
 }
 .navItem:hover{
     border-bottom-right-radius: 1rem;
     border-bottom-left-radius: 1rem;
-    height:7rem;
+    height:12rem;
     padding-top:7%;
     color:white;
 }
-
+.navItem:hover ul{
+    opacity:1;
+    font-size: inherit;
+}
 main{
     display:grid;
     grid-template-columns: repeat(2, 1fr);
