--- a/css/style.css
+++ b/css/style.css
@@ -2,26 +2,42 @@
     margin:0;
     padding:0;
 }
+html{
+    overflow:hidden;
+}
 .fas{
     font-size: 1.5rem;
 }
 body{
     background-color: rgb(241, 238, 238);
     font-size: 2rem;
-    background-image: url("../pics/cityBackground.jpg");
-    background-repeat: no-repeat;
-    background-size: cover;
+    perspective:1px;
+    transform-style:preserve-3d;
+    overflow-y: auto;
+    overflow-x: hidden;
+    width:100vw;
+    height:100vh;
+}
+.background{
+
+    z-index:-1;
+    width:100vw;
+    position:absolute;
+    transform-style:preserve-3d;
+    transform: translateZ(-8px) scale(16);
+    box-sizing: border-box;
+    top:0;
+    left:0;
 }
 header{
     background-color:rgba(241, 238, 238, 0.8);
 }
 
 nav{
+    position:sticky;
     width:100%;
     display:grid;
     grid-template-columns: repeat(3, 1fr);
-}
-#delare{
     height:18rem;
 }
 .aboutList{
@@ -55,6 +71,7 @@ nav{
     opacity:1;
     font-size: inherit;
 }
+
 main{
     display:grid;
     grid-template-columns: repeat(2, 1fr);
@@ -68,6 +85,18 @@ main{
     text-align:center;
     padding: 30%;
     margin: 10% 10% 0 0;
+}
+.light{
+    background-color: white;
+    border-radius: 0.5rem;
+    opacity:0.6;
+    text-align: center;
+}
+aside{
+    grid-column:2;
+    -ms-grid-rows: 2;
+    background-color: gray;
+    opacity:0.8;
 }
 
 @media (max-width:1000px){
