--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,16 @@
 html{
     overflow:hidden;
 }
-
+body::-webkit-scrollbar{
+    width:1rem;
+}
+body::-webkit-scrollbar-track{
+    background: rgb(40,40,40);
+}
+body::-webkit-scrollbar-thumb{
+    background: white;
+    border-radius:0.25rem;
+}
 body{
     background-color: rgb(241, 238, 238);
     font-size: 2rem;
@@ -15,10 +24,6 @@ body{
     overflow-x: hidden;
     width:100vw;
     height:100vh;
-
-    display:grid;
-    grid-template-columns: 1fr;
-    grid-template-rows: 10rem, 5rem, minmax(1rem, 7rem);
 }
 .background{
     z-index:-1;
@@ -36,13 +41,15 @@ body{
 }
 header{
     background-color:rgba(241, 238, 238, 0.8);
+    position:relative;
+    padding-left:5vw;
 }
 
 nav{
     position: sticky;
     top: 0;
     z-index:2;
-    width:100%;
+    width:100vw;
     display:grid;
     grid-template-columns: repeat(3, 1fr);
 }
@@ -58,6 +65,7 @@ nav{
 }
 
 .navItem{
+    position:sticky;
     text-align: center;
     height:5rem;
     border-bottom-right-radius:0;
@@ -83,32 +91,68 @@ nav{
 }
 
 
-
 main{
     display:grid;
-    grid-template-columns: repeat(2, 1fr);
+    grid-template-columns: repeat(4, 1fr);
+    top:20rem;
 }
-
-.dark{
-    background-color:darkgray;
-    color:white;
+.text{
     border-radius: 1rem;
     opacity:0.8;
     text-align:center;
-    padding: 30%;
-    margin: 10% 10% 0 0;
+    padding: 10%;
+    margin:10%;
+    -ms-grid-column-span: 2;
+}
+
+.dark{
+    background-color:black;
+    color:white;
 }
 .light{
     background-color: white;
-    border-radius: 0.5rem;
-    opacity:0.6;
-    text-align: center;
 }
-aside{
-    grid-column:2;
-    -ms-grid-rows: 2;
-    background-color: gray;
-    opacity:0.8;
+.gray{
+    background-color: darkgray;
+}
+
+
+.left{
+    grid-column:1/2;
+}
+.midLeft{
+    grid-column:1/3;
+}
+.mid{
+    grid-column:2/3;
+}
+.midRight{
+    grid-column:2/5;
+}
+.right{
+    grid-column:3/5;
+}
+.notAFoot{
+
+    
+}
+.aaahh{
+    padding-bottom:5rem;
+}
+
+footer{
+    background-image:linear-gradient(to bottom, rgba(241, 238, 238, 0.8), rgb(27, 26, 26));
+    /*margin:0;
+    padding:0;
+    bottom:0;
+    position:absolute;
+    display:grid;
+    grid-template-rows: 1fr 1fr;
+    grid-template-columns: repeat(3, 1fr);*/
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 5rem;            
 }
 
 @media (max-width:1000px){
@@ -120,5 +164,8 @@ aside{
         background-image: none;
         border-top:solid;
         border-color:rgba(15, 15, 15, 0.4);
+    }
+    main{
+        top:30rem;
     }
 }
