--- a/css/style.css
+++ b/css/style.css
@@ -52,6 +52,7 @@ nav{
     width:100vw;
     display:grid;
     grid-template-columns: repeat(3, 1fr);
+    height:12rem;
 }
 .aboutList{
     display:none;
@@ -132,13 +133,7 @@ main{
 .right{
     grid-column:3/5;
 }
-.notAFoot{
 
-    
-}
-.aaahh{
-    padding-bottom:5rem;
-}
 
 footer{
     background-image:linear-gradient(to bottom, rgba(241, 238, 238, 0.8), rgb(27, 26, 26));
@@ -149,10 +144,11 @@ footer{
     display:grid;
     grid-template-rows: 1fr 1fr;
     grid-template-columns: repeat(3, 1fr);*/
-    position: absolute;
     bottom: 0;
     width: 100%;
-    height: 5rem;            
+    height: 5rem;
+    color:white;
+    padding:1rem;
 }
 
 @media (max-width:1000px){
