--- a/css/style.css
+++ b/css/style.css
@@ -32,8 +32,8 @@ body{
     transform-style:preserve-3d;
     transform: translateZ(-1px) scale(2);
     box-sizing: border-box;
-    /*vertical-align: top;
-    background-position: top;*/
+    vertical-align: top;
+    background-position: top;
 }
 .fas{
     font-size: 1.5rem;
@@ -125,7 +125,7 @@ main{
     grid-column:1/3;
 }
 .mid{
-    grid-column:2/4;
+    grid-column:2/3;
 }
 .midRight{
     grid-column:2/5;
@@ -133,21 +133,22 @@ main{
 .right{
     grid-column:3/5;
 }
-.fill{
-    grid-column:1/5;
-}
 
 
 footer{
     background-image:linear-gradient(to bottom, rgba(241, 238, 238, 0.8), rgb(27, 26, 26));
+    /*margin:0;
+    padding:0;
+    bottom:0;
+    position:absolute;
     display:grid;
     grid-template-rows: 1fr 1fr;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(3, 1fr);*/
+    bottom: 0;
     width: 100%;
-    height: 10rem;
+    height: 5rem;
     color:white;
     padding:1rem;
-    font-size: 1.2rem;
 }
 
 @media (max-width:1000px){
