--- a/css/style.css
+++ b/css/style.css
@@ -36,12 +36,23 @@ body{
     background-position: top;
 }
 #andra{
-    margin-top:500vh;
+    margin-top:250%;
 }
 #mellan{
     height:100vh;
-    margin-top:320vh;
+    margin-top:160%;
     background-image: linear-gradient(to bottom, rgba(92, 79, 79, 0), rgb(0, 0, 0), rgb(0, 0, 0), rgb(59, 57, 57), rgba(0,0,0,0));
+}
+
+a{
+    color:#dbdb94;
+    transition:margin 1s;
+}
+a:hover{
+    color:#dada68;
+}
+li>a:hover{
+    margin-left:1rem;
 }
 
 .fas{
@@ -124,6 +135,8 @@ main{
 }
 .gray{
     background-color: darkgray;
+    color:white;
+    /*text-shadow: 2px 2px 2px white;*/
 }
 
 
@@ -157,12 +170,25 @@ footer{
     color:white;
     padding:1rem;
     font-size: 1.2rem;
+
+    position:absolute;
+    margin-bottom:0;
 }
 
 @media (max-width:1000px){
+    body::-webkit-scrollbar{
+        width:0.8rem;
+    }
+    /*#andra{
+        margin-top:150vh;
+    }
+    #mellan{
+        margin-top:96vh;
+    }*/
     nav{
         grid-template-columns:1fr;
         background-image: linear-gradient(to bottom, rgba(241, 238, 238, 0.8), rgba(54, 52, 52, 1));
+        height:30rem;
     }
     .navItem{
         background-image: none;
