--- a/css/style.css
+++ b/css/style.css
@@ -16,7 +16,7 @@ body::-webkit-scrollbar-thumb{
     border-radius:0.25rem;
 }
 body{
-    background-color: rgb(241, 238, 238);
+    background-color: rgb(53, 52, 52);
     font-size: 2rem;
     perspective:1px;
     transform-style:preserve-3d;
@@ -41,7 +41,8 @@ body{
 #mellan{
     height:100vh;
     margin-top:160%;
-    background-image: linear-gradient(to bottom, rgba(92, 79, 79, 0), rgb(0, 0, 0), rgb(0, 0, 0), rgb(59, 57, 57), rgba(0,0,0,0));
+    background-image: linear-gradient(to bottom, rgba(92, 79, 79, 0), rgb(53, 52, 52), rgb(53, 52, 52), rgb(53, 52, 52));
+
 }
 
 a{
@@ -75,7 +76,7 @@ nav{
     height:12rem;
 }
 .aboutList{
-    display:none;
+    /*display:none;*/
     text-align: start;
     opacity:0;
     font-size: 0.1rem;
@@ -181,10 +182,11 @@ footer{
     }
     /*#andra{
         margin-top:150vh;
-    }
-    #mellan{
-        margin-top:96vh;
     }*/
+    #mellan{
+        height:20vh;
+        margin-top:180%;
+    }
     nav{
         grid-template-columns:1fr;
         background-image: linear-gradient(to bottom, rgba(241, 238, 238, 0.8), rgba(54, 52, 52, 1));
