--- a/css/style.css
+++ b/css/style.css
@@ -118,9 +118,8 @@ main{
     grid-template-columns: repeat(4, 1fr);
     top:20rem;
 }
-.text{
+section{
     border-radius: 1rem;
-    opacity:0.8;
     text-align:center;
     padding: 10%;
     margin:10%;
@@ -128,14 +127,14 @@ main{
 }
 
 .dark{
-    background-color:black;
+    background-color: rgba(0, 0, 0, 0.8);
     color:white;
 }
 .light{
-    background-color: white;
+    background-color: rgba(255, 255, 255, 0.8);
 }
 .gray{
-    background-color: darkgray;
+    background-color: rgba(169, 169, 169, 0.8);
     color:white;
     /*text-shadow: 2px 2px 2px white;*/
 }
@@ -158,8 +157,13 @@ main{
 }
 .fill{
     grid-column:1/5;
+    margin:10% 0;
 }
 
+.multiple{
+    display:grid;
+    grid-template-columns: 1fr 4fr;
+}
 
 footer{
     background-image:linear-gradient(to bottom, rgba(241, 238, 238, 0.8), rgb(27, 26, 26));
@@ -174,6 +178,10 @@ footer{
 
     position:absolute;
     margin-bottom:0;
+}
+
+.bruce{
+    width:100%;
 }
 
 @media (max-width:1000px){
