--- a/css/style.css
+++ b/css/style.css
@@ -18,6 +18,7 @@ body::-webkit-scrollbar-thumb{
 body{
     background-color: rgb(53, 52, 52);
     font-size: 2rem;
+    /*font-size:2vw;*/
     font-family: 'EB Garamond', serif;
     perspective:1px;
     transform-style:preserve-3d;
@@ -66,7 +67,7 @@ nav{
     width:100vw;
     display:grid;
     grid-template-columns: repeat(3, 1fr);
-    height:12rem;
+    height:7rem;
 }
 .navItem{
     position:sticky;
@@ -259,22 +260,7 @@ footer{
     width:100%;
 }
 
-/*Founder*/
-.container{
-    display:block;
-    position:relative;
-    padding:0;
-    z-index:2;
-    top:0;
-}
-.container section{
-    position:relative;
-    margin:0;
-    padding:10%;
-    width:80%;
-    height:80vh;
-    border-radius: 0;
-}
+
 
 @media (max-width:1000px){
     body::-webkit-scrollbar{
