--- a/css/style.css
+++ b/css/style.css
@@ -143,7 +143,7 @@ section{
     padding: 10%;
     margin:10%;
     opacity:0;
-    transition:opacity 1s;
+    transition:opacity 1s, background-color 0.5s;
     /*-ms-grid-column-span: 2;*/
 }
 
@@ -152,13 +152,22 @@ section{
     background-color: rgba(0, 0, 0, 0.8);
     color:white;
 }
+.dark:hover{
+    background-color: rgba(0, 0, 0, 0.9);
+}
 .light{
     background-color: rgba(255, 255, 255, 0.8);
+}
+.light:hover{
+    background-color: rgba(255, 255, 255, 0.9);
 }
 .gray{
     background-color: rgba(169, 169, 169, 0.8);
     color:white;
     /*text-shadow: 2px 2px 2px white;*/
+}
+.gray:hover{
+    background-color: rgba(169, 169, 169, 0.9);
 }
 
 
