--- a/css/timeline.css
+++ b/css/timeline.css
@@ -10,17 +10,14 @@ main{
     position:absolute;
 }
 article{
-    /*position:absolute;*/
     margin:0;
-    padding:10%;
-    width:80%;
-    /*height:80vh;*/
+    width:100%;
+    text-align: center;
     border-radius: 0;
     opacity:1;
-    height:100vh;
+    padding-top:10%;
 }
 .start{
-    z-index:0;
     height:30rem;
     text-align: center;
     padding-top:10%;
@@ -34,14 +31,14 @@ article{
     top:60%;
 }
 .slide{
-    width:100%;
     height:100%;
     position: fixed;
     top:100vh;
     transition:top 2s, opacity 3s;
 }
+
 .ett{
+    z-index:0;
     display:block;
     top:0vh;
-    z-index: 1;
 }
