--- a/css/timeline.css
+++ b/css/timeline.css
@@ -103,6 +103,29 @@ article{
     transition:top 2s, opacity 3s;
 }
 
+
+.dark{
+    background-color: rgba(0, 0, 0, 0.95);
+    color:white;
+}
+.dark:hover{
+    background-color: rgba(0, 0, 0, 0.95);
+}
+.light{
+    background-color: rgba(255, 255, 255, 0.95);
+}
+.light:hover{
+    background-color: rgba(255, 255, 255, 0.95);
+}
+.gray{
+    background-color: rgba(169, 169, 169, 0.95);
+    color:white;
+    /*text-shadow: 2px 2px 2px white;*/
+}
+.gray:hover{
+    background-color: rgba(169, 169, 169, 0.95);
+}
+
 .ett{
     z-index:0;
     top:0;
